[package]
name = "okc-agents"
version = "0.1.2"
authors = ["DDoSolitary <DDoSolitary@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
clap = "2.33.3"
futures-util = "0.3.15"
lazy_static = "1.4.0"
libc = "0.2.98"
slog = "2.7.0"
slog-async = "2.6.0"
slog-envlogger = "2.2.0"
slog-term = "2.8.0"
tokio = { version = "1.11.0", features = ["full"] }
tokio-stream = { version = "0.1.7", features = ["net"] }

[profile.release]
lto = true
